<resources>
    <string name="app_name">Qbert</string>
    <string name="welcome">Welcome to Qbert</string>
    <string name="start">Start</string>
    <string name="configure">Configure</string>
    <string name="checking_sanity">Checking configuration…</string>
    <string name="fix_config">Fix it</string>
    <string name="config_errors">Found errors in the config</string>
    <string name="dependencies">Enable/Disable plugins</string>
    <string name="generic">GenericPlugin</string>
    <string name="suggester">Suggester</string>
    <string name="provider">Provider</string>
    <string name="satisfied">Looks fine</string>
    <string name="unsatisfied">Missing dependencies</string>
    <string name="loading">Loading…</string>
    <string name="active">Active: %s</string>
    <string name="empty">None found</string>
    <string name="disable">Disable</string>
    <string name="enable">Enable</string>
    <string name="edit">Edit</string>
    <string name="select_dependency">Select dependencies</string>
    <string name="no_implementation">No implementation selected</string>
    <string name="no_provider">No providers are enabled</string>
    <string name="dependency_errors">There are missing dependencies</string>
    <string name="placeholder">Placeholder</string>
    <string name="refresh">Refresh</string>
    <string name="main_config">Main config</string>
    <string name="value_ok">Entry value is OK</string>
    <string name="value_error">Entry value has error</string>
    <string name="pause">Pause</string>
    <string name="play">Play</string>
    <string name="player_error">Player error</string>
    <string name="next">Next song</string>
    <string name="suggested">Suggested</string>
    <string name="album_art_image">Album art image</string>
    <string name="unknown">unknown</string>
    <string name="duration_template">%s / %s</string>
    <string name="checking_running">Checking whether bot is running</string>
    <string name="notification_title">Qbert is running</string>
    <string name="notification_message">The server is running</string>
    <string name="notification_ticker">Ticker</string>
    <string name="notification_channel_name">Ongoing</string>
    <string name="notification_channel_description">Notification displayed while the bot is running</string>
    <string name="stop">Stop</string>
    <string name="open">Open</string>
    <string name="stopping">Stopping…</string>
    <string name="title_dependency_overview">Dependency overview</string>
    <string name="select_implementation">Select implementation</string>
    <string name="title_config_overview">Config overview</string>
    <string name="title_plugin_config">Configure plugin</string>
    <string name="title_dependency_list">Dependencies</string>
</resources>
